10 Sep 2009 (svn.debian.org/tux4kids - revision 1504) 
[ Matthew Trey <tux4kids@treyhome.com> ]
        - Scripting - added code so the script parser recognizes comments in
		  xml.

31 Aug 2009 (svn.debian.org/tux4kids - revision 1470)
[ Matthew Trey <tux4kids@treyhome.com> ]
        - Practice - fixed a problem that was causing the wrong key to flash
		  in the bottom row of keys
		- Game Instructions - simplified and reactivated cascade and laser game
		  instruction scripts, fixed scripting background image so that it scales
		  properly in fullscreen
		- Scripting - Added some basic scripts so that new users will have a
		  complete lesson set out of the box. Added a howto	in the docs.
		  
10 Jun 2009 (svn.debian.org/tux4kids - revision 1034)
[ David Bruce <davidstuartbruce@gmail.com> ]
Version 1.7.5
        - i18n - fix of problem with GNU gettext convenience string-marking macros
          due to XGETTEXT_OPTIONS not being set correctly in po/Makevars
        - Scripting - cleanup of some other menu issues
        - Build - update of specfile.in's to handle new libs being used for this
          year's GSoC projects (svg support, LAN support)

08 Jun 2009 (svn.debian.org/tux4kids - revision 1017)
[ David Bruce <davidstuartbruce@gmail.com> ]
        - Scripting - fix of bug in scripting.c run_script() where font size left
          at zero.

06 Jun 2009 (svn.debian.org/tux4kids - revision 1013)
[ David Bruce <davidstuartbruce@gmail.com> ]
        - Paths - added support for localstatedir (shared modifiable data, generally
          located under /var) and sysconfdir (program-wide settings, generally located
          under /etc) to autotools build system.  Also updated the game_option_type struct
          to have a field for the shared modifiable data - var_data_path.  This is the
          intended location for shared custom word lists, high scores, and so forth.

23 Mar 2009 (svn.debian.org/tux4kids - revision 945)