@@ -17,10 +17,6 @@ As you can see, the ideas are similar for both programs.
 
 Apart from GSoC, both programs need ongoing code cleanup, especially tuxtype.  Also, tuxtype could benefit greatly at this point from a refresh of things other than the C code itself - high-resolution backgrounds, completion of rest of menu sprite icons, more word lists and phrase files, etc. 
 
--Replace the five remaining files which are non-free accoring to 
- Debians Free Software Guidelines with free ones. click.wav and
- kmus(1-4).wav are only free for non-commercial use.
-
 -check that SVN is free of generated files. create release-script, 
 
 
